syntax = "proto3";
package universal;

option go_package = "universal/common/pb";

import "packet.proto";

// 登录协议
message LoginReq {
  string Token = 1;  // token
}

message LoginRsp {
  RspHead Head = 1;  // 协议头
}

// 登出协议
message LogoutReq {
  uint64 Uid = 1;  // 玩家ID
}

message LogoutRsp {
  RspHead Head = 1;  // 协议头
}

// 心跳协议
message HeartReq {
  int64 Utc       = 1;  // UTC时区
  int64 BeginTime = 2;  // 请求时间
}

message HeartRsp {
  RspHead Head      = 1;  // 协议头
  int64   Utc       = 2;  // UTC时区
  int64   BeginTime = 3;  // 请求时间
  int64   EndTime   = 4;  // 响应时间
}